<resources>
    <string name="app_name">Bin Men Qash</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="spice_legumes"><![CDATA[Spice & Legumes]]></string>
    <string name="home">Home</string>
    <string name="oil_herbs"><![CDATA[Oil & Herbs]]></string>
    <string name="beverages_cardamom"><![CDATA[Beverages & Cardamom]]></string>
    <string name="nuts_candy_honey">Nuts, Candy, Honey</string>
    <string name="others">Others</string>
    <string name="my_cart">My Cart</string>
    <string name="my_whishlist">My Whishlist</string>
    <string name="my_orders">My Orders</string>
    <string name="my_account">My Account</string>
    <string name="select_currency">Select Currency</string>
    <string name="select_language">Select Language</string>
    <string name="about_us">About Us</string>
    <string name="health_tips">Health Tips</string>
    <string name="contact_us">Contact Us</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="nuts_sweets"><![CDATA[Nuts & Sweets]]></string>
    <string name="honey">Honey</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="quantity">Quantity : </string>
    <string name="availability">Availability : </string>
    <string name="available">Available</string>
    <string name="no_internet">Your Internet Connection Appears To Be Offline</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password.?</string>
    <string name="user_name">User Name</string>
    <string name="sign_in">Sign In</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="or_sign_with_a_social_account">OR SIGN WITH A SOCIAL ACCOUNT</string>
    <string name="new_here_sign_up">New here? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="mobile_no">Mobile No</string>
</resources>
