<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:src="@mipmap/bg_curve"
        android:scaleType="fitXY"/>
    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/profile_photo"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/banner"
        style="@style/banner1"
        android:text="@string/sign_up"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/profile_pic"/>



    <EditText
        android:id="@+id/name"
        style="@style/editTextSignIn"
        android:hint="@string/full_name"
        android:inputType="text"
        android:gravity="start"
        android:layout_below="@+id/banner"/>

    <EditText
        android:id="@+id/email"
        style="@style/editTextSignIn"
        android:hint="@string/email"
        android:gravity="start"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/name"/>

    <EditText
        android:id="@+id/mobile"
        style="@style/editTextSignIn"
        android:hint="@string/mobile_no"
        android:gravity="start"
        android:inputType="phone"
        android:layout_below="@+id/email"/>

    <EditText
        android:id="@+id/password"
        style="@style/editTextSignIn"
        android:hint="@string/password"
        android:gravity="start"
        android:inputType="textPassword"
        android:layout_below="@+id/mobile"/>

    <EditText
        android:id="@+id/cnfrm_password"
        style="@style/editTextSignIn"
        android:hint="@string/confirm_password"
        android:gravity="start"
        android:inputType="textPassword"
        android:layout_below="@+id/password"/>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cnfrm_password"
        android:layout_margin="20dp"
        android:background="@drawable/curve_small_green"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/banner_social_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sign_up"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/or_sign_with_a_social_account"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/facebook"
        android:layout_toStartOf="@+id/center"
        android:layout_below="@+id/banner_social_media"/>
    <ImageView
        android:id="@+id/center"
        android:layout_width="5dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/banner_social_media"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/google"
        android:layout_toEndOf="@+id/center"
        android:layout_below="@+id/banner_social_media"/>

    <TextView
        android:id="@+id/english"
        style="@style/languageSelectSignUp"
        android:text="@string/english"
        android:layout_above="@+id/space"
        android:layout_toStartOf="@+id/center_language"/>
    <View
        android:id="@+id/center_language"
        android:layout_width="1dp"
        android:layout_height="15dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"

        android:background="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/center"/>


    <TextView
        android:id="@+id/arabic"
        style="@style/languageSelectSignUp"
        android:text="@string/arabic"
        android:layout_above="@+id/space"
        android:layout_toEndOf="@+id/center_language"/>

        <View
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/center_language"/>

</RelativeLayout>
</ScrollView>