<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".home.HomeActivity"
    tools:showIn="@layout/app_bar_home"
    android:background="@color/grayGreenish">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:orientation="vertical">
         <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="1dp"
             android:background="@color/greenDark"
            android:layout_height="1dp"/>
        <LinearLayout
            android:layout_marginTop="-1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/greenDark">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/search_box"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/search"
                android:drawablePadding="5dp"
                android:maxLines="1"
                android:inputType="text"
                android:padding="5dp"
                android:hint="search"/>
        </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"/>
        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            android:layout_below="@+id/pager"
            android:layout_marginTop="-50dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/banner_category"
           style="@style/banner1"
            android:text="@string/shop_by_category"/>
        <ImageView
            android:id="@+id/img_beverage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@mipmap/banner1"
            android:scaleType="centerCrop"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/banner_category"/>
        <TextView
            style="@style/ImageBannerText"
            android:text="@string/beverages_cardamom"
            android:layout_below="@+id/banner_category"/>
        <ImageView
            android:id="@+id/img_oil_herbs"
            android:layout_width="150dp"
            android:src="@mipmap/banner1"
            android:scaleType="centerCrop"
            android:layout_height="match_parent"
            android:layout_below="@+id/img_beverage"
            android:layout_above="@+id/img_others"
            />
        <TextView
            style="@style/ImageBannerText"
            android:text="@string/oil_herbs"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/img_beverage"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/img_beverage"
            android:layout_toEndOf="@+id/img_oil_herbs"
            android:layout_above="@+id/img_others"
            android:layout_marginStart="10dp"
            android:weightSum="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_spices"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@mipmap/banner1"
                android:scaleType="centerCrop"
                android:layout_weight=".5"/>
            <ImageView
                android:id="@+id/img_nuts"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@mipmap/banner1"
                android:scaleType="centerCrop"
                android:layout_marginTop="10dp"
                android:layout_weight=".5"/>
        </LinearLayout>
        <TextView
            style="@style/ImageBannerText"
            android:text="@string/spice_legumes"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/img_beverage"
            />

        <TextView
            style="@style/ImageBannerText"
            android:text="@string/nuts_candy_honey"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/img_others"
            />

        <ImageView
            android:id="@+id/img_others"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:src="@mipmap/banner1"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"/>
        <TextView
            style="@style/ImageBannerText"
            android:text="@string/others"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    </LinearLayout>
</ScrollView>