<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/product_thumbnail"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/product_box"
        android:src="@drawable/test_honey"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/product_name"
        style="@style/banner1"
        android:text="@string/lorem_ipsum"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@id/product_thumbnail"/>

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/delete"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/price"
        style="@style/productPrice"
        android:text="@string/lorem_ipsum"
        android:layout_toEndOf="@+id/product_thumbnail"
        android:layout_below="@+id/product_name"/>
    <TextView
        android:id="@+id/quantity_no"
        style="@style/showRatingStar"
        android:text="3.5"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@+id/product_thumbnail"
        android:layout_below="@+id/availability_banner"/>
    
    <TextView
        android:id="@+id/availability_banner"
        style= "@style/availabilityBanner"
        android:text="@string/availability"
        android:layout_toEndOf="@+id/product_thumbnail"
        android:layout_below="@+id/price"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/availability"
        style= "@style/availabilityBanner"
        android:textColor="@color/greenPrimaryDark"
        android:text="@string/available"
        android:layout_toEndOf="@+id/availability_banner"
        android:layout_below="@+id/price"
        android:layout_marginBottom="10dp"
        />

   
    <TextView
        android:id="@+id/finalPrice"
        style="@style/productFinalPrice"
        android:layout_toEndOf="@+id/product_thumbnail"
        android:layout_below="@+id/quantity_no"
        android:textColor="@color/black"
        android:text="SAR 260:00"/>

    <View
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="1dp"
        android:background="@color/gray" />

</RelativeLayout>